# OCTRON-GUI

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  environment.yaml  environment_cuda.yaml  ffmpeg_windows.md  mp4_to_gif.py  pyproject.toml  setup.cfg  setup.py  test_gpu.py
octron/: __init__.py  gui_dialog_elements.py  gui_elements.py  gui_tables.py  main.py  napari.yaml  post_install.py  reader.py  url_check.py  yolo_handler.py
octron/notebooks/: OCTRON_results_loading.ipynb  napari_tests video readers.ipynb  napari_tests.ipynb  napari_yolo.ipynb  napari_yolo_prediction.ipynb  napari_yolo_visualize.ipynb
octron/qt_gui/: conversion_code_gui.py  octron.py  octron.ui  octron_corrected.py  octron_logo.ai
octron/sam2_octron/: models.yaml  object_organizer.py  sam2_models.yaml
octron/sam2_octron /helpers/: build_sam_octron.py  sam2_video_predictor_octron.py
octron/sam2_octron /notebooks/: Horst1.ipynb
octron/sam2_octron/configs/sam2.1/: sam2.1_hiera_b+.yaml  sam2.1_hiera_l.yaml  sam2.1_hiera_s.yaml  sam2.1_hiera_t.yaml  sam2.1_hq_hiera_l.yaml
octron/sam2_octron/helpers/: __init__.py  build_sam2_octron.py  build_sam_octron.py  sam2_checks.py  sam2_colors.py  sam2_layer.py  sam2_layer_callback.py  sam2_layers.py  sam2_mask_layer.py  sam2_octron.py  sam2_points_layer.py  sam2_video_predictor_octron.py  sam2_zarr.py  sam2hq_octron.py  video_loader.py
octron/sam2_octron/notebooks/: Horst1.ipynb
octron/tools/: __init__.py  mp4_to_gif.py
octron/tracking/: boxmot_trackers.yaml  tracker_config_ui.py
octron/tracking/configs/: basetracker.yaml  boosttrack.yaml  botsort.yaml  bytetrack.yaml  deepocsort.yaml  hybridsort.yaml  ocsort.yaml  strongsort.yaml
octron/tracking/helpers/: tracker_checks.py  tracker_vis.py
octron/yolo_octron/: yolo_models.yaml  yolo_octron.py
octron/yolo_octron/gui/: yolo_handler.py
octron/yolo_octron/helpers/: boxmot.py  mask_interpolation.py  polygons.py  training.py  yolo_checks.py  yolo_plotting.py  yolo_results.py  yolo_zarr.py
qt_gui/: conversion_code_gui.py  octron.py  octron.ui  octron_corrected.py  octron_logo.ai
