[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "octron"
version = "0.0.1"
description = "OCTRON"
authors = [
    { name = "Horst A. Obenhaus", email = "hobenhaus@gmail.com" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
keywords = ["octron", "video segmentation", "napari", "object tracking", "behavior quantification", "machine learning", "sam2", "yolo11"]
classifiers = [
    "Framework :: napari",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

requires-python = ">=3.11,<3.12"

dependencies = [
    "napari>=0.5.6",
    "numpy>=2.1.3",
    "PyQt5>=5.15.0",
    "qtpy>=2.4.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "av>=14.1.0",
    "tqdm>=4.67.1",
    "scikit-image>=0.25.0",
    "zarr>=3.0.1",
    "kornia>=0.8.0",
    "cmasher>=1.9.2",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
    "napari-pyav @ git+https://github.com/horsto/napari-pyav.git"
]

[project.urls]
Homepage = "https://github.com/horsto/octron"

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]
# Windows CUDA extra: Only install these packages on Windows.
win_cuda = [
    "nvidia-pyindex; sys_platform=='win32'",
    "nvidia-cuda-runtime-cu12; sys_platform=='win32'",
    "nvidia-cuda-cupti-cu12; sys_platform=='win32'",
    "nvidia-cuda-nvcc-cu12; sys_platform=='win32'",
    "nvidia-cuda-nvrtc-cu12; sys_platform=='win32'",
    "nvidia-cublas-cu12; sys_platform=='win32'",
    "nvidia-nvjpeg-cu12; sys_platform=='win32'"
]

[project.entry-points."napari.manifest"]
octron = "octron:napari.yaml"

[project.scripts]
octron = "octron:napari.yaml"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md", "*.rst"]

[tool.setuptools.data-files]
"data" = ["data/*.dat"]