[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "octron"
version = "0.0.1"
description = "OCTRON - a napari based tool for video segmentation, animal tracking and behavior quantification"
authors = [
    { name = "Horst A. Obenhaus", email = "hobenhaus@gmail.com" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
keywords = ["octron", "video segmentation", "napari", "object tracking", "behavior quantification", "machine learning", "sam2", "yolo11"]
classifiers = [
    "Framework :: napari",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
]

requires-python = ">=3.11,<3.12"

dependencies = [
    "napari>=0.5.6",
    "numpy>=2.1.3",
    "PyQt5>=5.15.0",
    "qtpy>=2.4.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "av>=14.1.0",
    "tqdm>=4.67.1",
    "scikit-image>=0.25.0",
    "zarr>=3.0.1",
    "kornia>=0.8.0",
    "cmasher>=1.9.2",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
    "napari-pyav @ git+https://github.com/horsto/napari-pyav.git"
]

[project.urls]
Homepage = "https://github.com/horsto/octron"
Repository = "https://github.com/horsto/octron.git"
Issues = "https://github.com/horsto/octron/issues"
Changelog = "https://github.com/horsto/octron/blob/master/CHANGELOG.md"

[project.entry-points."napari.manifest"]
octron = "octron:napari.yaml"

[project.scripts]
octron = "octron:napari.yaml"
octron-gui = "octron.main:octron_gui"

[tool.setuptools.packages.find]
where = ["."]
include = ["octron*", "qt_gui"]
exclude = ["pics", "sample_data"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.svg", "*.md"]