[build-system]
requires = [
  "setuptools>=62.3.0,<75.8.1",
  "wheel",
  "setuptools_scm[toml]>=6.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "octron"
dynamic = ["version"]
description = "OCTRON - segmentation and tracking for animal behavior quantification"

authors = [
    { name = "Horst A. Obenhaus", email = "hobenhaus@gmail.com" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
keywords = ["octron", "video segmentation", "napari", "object tracking", "behavior quantification", "machine learning", "sam2", "yolo11"]
classifiers = [
    "Framework :: napari",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
]

requires-python = ">=3.11,<3.12"
dependencies = [
    "napari>=0.6.0",
    "numpy<=2.1.1",
    "PyQt5>=5.15.11",
    "qtpy>=2.4.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "av>=14.1.0",
    "tqdm>=4.67.1",
    "scipy>=1.15.1",
    "pandas>=2.2.3",
    "scikit-image>=0.25.0",
    "zarr>=3.0.4",
    "kornia>=0.8.0",
    "cmasher>=1.9.2",
    "imantics",
    "ultralytics>=8.3.152",
    "tensorboard>=2.19.0",
    "lap>=0.5.12",
    "opencv-python>=4.11.0",       
    "natsort>=8.4.0",   
    "napari-pyav @ https://github.com/horsto/napari-pyav/releases/download/v0.0.85/napari_pyav-0.0.8-py3-none-any.whl",
    "hq-sam-2 @ https://github.com/horsto/sam-hq/releases/download/v0.0.1/hq_sam_2-1.0-py3-none-any.whl",
    "sam-2 @ https://github.com/horsto/sam2/releases/download/v0.0.1/sam_2-1.0-py3-none-any.whl"
]

[project.urls]
Homepage = "https://github.com/horsto/octron"
Repository = "https://github.com/horsto/octron.git"
Issues = "https://github.com/horsto/octron/issues"
Changelog = "https://github.com/horsto/octron/blob/master/CHANGELOG.md"

[project.entry-points."napari.manifest"]
octron = "octron:napari.yaml"

[project.entry-points."pipx.run"]
octron = "octron.main:octron_gui"

# Register our post-install function to run automatically after installation
[project.entry-points."setuptools.installation"]
post_install = "octron.post_install:run_post_install"

[project.scripts]
octron = "octron:napari.yaml"
octron-gui = "octron.main:octron_gui"
octron-gif = "octron.tools.mp4_to_gif:main"
octron-post-install = "octron.post_install:main"
octron-test-gpu = "octron.test_gpu:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["octron*", "qt_gui"]
exclude = ["pics", "sample_data"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.svg", "*.md"]

[tool.setuptools_scm]
# write version into code for import
write_to = "octron/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"