[metadata]
name = octron
version = 0.0.1
author = Horst A. Obenhaus
author_email = hobenhaus@gmail.com
description = OCTRON
long_description = file: README.md, LICENSE
keywords = octron, video segmentation, napari, machine learning, sam2, yolo11
license = GPL-3.0
classifiers =
    Framework :: napari
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
include_package_data = True
install_requires =
    napari>=0.5.6
    numpy>=2.1.3
    qtpy>=2.4.2
    torch>=2.5.1
    torchvision>=0.20.1
    av>=14.1.0
    tqdm>=4.67.1
    scikit-image>=0.25.0
    zarr>=3.0.1
    kornia>=0.8.0
    cmasher>=1.9.2
    git+https://github.com/facebookresearch/sam2.git
    git+https://github.com/horsto/napari-pyav.git

python_requires = ==3.11.0


[options.entry_points]
napari.manifest =
    octron = octron:napari.yaml