[metadata]
name = octron
version = 0.0.1
author = Horst A. Obenhaus
author_email = hobenhaus@gmail.com
description = OCTRON
long_description = file: README.md, LICENSE
keywords = octron, video segmentation, napari, machine learning, sam2, yolo11
license = GPL-3.0
classifiers =
    Framework :: napari
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
include_package_data = True

[options.entry_points]
napari.manifest =
    octron = octron:napari.yaml